<resources>
    <string name="app_name">PQ2 Johnson NA</string>
    <string name="load">Load</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="task_4">Task 4</string>
    <string name="_0">0</string>
    <string name="task_3">Task 3</string>
    <string name="task_1">Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="task_0">Task 0</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
</resources>