<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.sdsmt.pq2_johnson_na.MainActivity">

    <Button
        android:id="@+id/task0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="onTask0"
        android:text="@string/task_0"
        app:layout_constraintBottom_toTopOf="@+id/task3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/task2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onTask2"
        android:text="@string/task_2"
        app:layout_constraintBottom_toTopOf="@+id/task3"
        app:layout_constraintStart_toEndOf="@+id/task1" />

    <Button
        android:id="@+id/task1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onTask1"
        android:text="@string/task_1"
        app:layout_constraintBottom_toTopOf="@+id/task3"
        app:layout_constraintStart_toEndOf="@+id/task0" />

    <Button
        android:id="@+id/task3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="onTask3"
        android:text="@string/task_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <edu.sdsmt.pq2_johnson_na.PQ2_View
        android:id="@+id/PQ2_View"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/task1"
        app:layout_constraintDimensionRatio="w,1:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputC" />

    <Button
        android:id="@+id/task4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onTask4"
        android:text="@string/task_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/task3" />

    <TextView
        android:id="@+id/outputLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/outputCenter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/outputCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/outputRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/outputLeft"
        app:layout_constraintTop_toTopOf="@+id/outputLeft" />

    <TextView
        android:id="@+id/outputRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/outputCenter"
        app:layout_constraintTop_toTopOf="@+id/outputCenter" />

    <EditText
        android:id="@+id/inputA"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/a"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outputLeft"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/inputB"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/b"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputA"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/inputC"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/c"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputB"
        android:importantForAutofill="no" />
</androidx.constraintlayout.widget.ConstraintLayout>